# IO_BOARD

./: .gitignore  AGENTS.md  README.md
.vendor/: Document.json
.vendor/AT32F45x_Firmware_Library_V2.0.1/document/: ReleaseNotes_AT32F45x_Firmware_Library.htm  ReleaseNotes_AT32F45x_Firmware_Library_V2.0.1_EN.htm
.vendor/AT32F45x_Firmware_Library_V2.0.1/libraries/drivers/: ReleaseNotes_AT32F45x_Firmware_Library_Drivers.htm  ReleaseNotes_AT32F45x_Firmware_Library_Drivers_V2.0.1_EN.htm
.vendor/AT32F45x_Firmware_Library_V2.0.1/libraries/drivers/inc/: at32f45x_acc.h  at32f45x_adc.h  at32f45x_aes.h  at32f45x_can.h  at32f45x_crc.h  at32f45x_crm.h  at32f45x_dac.h  at32f45x_debug.h  at32f45x_def.h  at32f45x_dma.h  at32f45x_emac.h  at32f45x_ertc.h  at32f45x_exint.h  at32f45x_flash.h  at32f45x_gpio.h  at32f45x_i2c.h  at32f45x_misc.h  at32f45x_pwc.h  at32f45x_qspi.h  at32f45x_scfg.h  at32f45x_sdio.h  at32f45x_spi.h  at32f45x_tmr.h  at32f45x_trng.h  at32f45x_usart.h  at32f45x_usb.h  at32f45x_wdt.h  at32f45x_wwdt.h  at32f45x_xmc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/libraries/drivers/src/: at32f45x_acc.c  at32f45x_adc.c  at32f45x_aes.c  at32f45x_can.c  at32f45x_crc.c  at32f45x_crm.c  at32f45x_dac.c  at32f45x_debug.c  at32f45x_dma.c  at32f45x_emac.c  at32f45x_ertc.c  at32f45x_exint.c  at32f45x_flash.c  at32f45x_gpio.c  at32f45x_i2c.c  at32f45x_misc.c  at32f45x_pwc.c  at32f45x_qspi.c  at32f45x_scfg.c  at32f45x_sdio.c  at32f45x_spi.c  at32f45x_tmr.c  at32f45x_trng.c  at32f45x_usart.c  at32f45x_usb.c  at32f45x_wdt.c  at32f45x_wwdt.c  at32f45x_xmc.c
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/i2c_application_library/: i2c_application.c  i2c_application.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usb_drivers/inc/: usb_core.h  usb_std.h  usbd_core.h  usbd_int.h  usbd_sdr.h  usbh_core.h  usbh_ctrl.h  usbh_int.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usb_drivers/src/: usb_core.c  usbd_core.c  usbd_int.c  usbd_sdr.c  usbh_core.c  usbh_ctrl.c  usbh_int.c
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/audio/: audio_class.c  audio_class.h  audio_conf.h  audio_desc.c  audio_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/audio_hid/: audio_conf.h  audio_hid_class.c  audio_hid_class.h  audio_hid_desc.c  audio_hid_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/cdc/: cdc_class.c  cdc_class.h  cdc_desc.c  cdc_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/composite_cdc_keyboard/: cdc_keyboard_class.c  cdc_keyboard_class.h  cdc_keyboard_desc.c  cdc_keyboard_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/composite_cdc_msc/: cdc_msc_class.c  cdc_msc_class.h  cdc_msc_desc.c  cdc_msc_desc.h  msc_bot_scsi.c
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/custom_hid/: custom_hid_class.c  custom_hid_class.h  custom_hid_desc.c  custom_hid_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/hid_iap/: hid_iap_class.c  hid_iap_class.h  hid_iap_desc.c  hid_iap_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/keyboard/: keyboard_class.c  keyboard_class.h  keyboard_desc.c  keyboard_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/mouse/: mouse_class.c  mouse_class.h  mouse_desc.c  mouse_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/msc/: msc_bot_scsi.c  msc_bot_scsi.h  msc_class.c  msc_class.h  msc_desc.c  msc_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/printer/: printer_class.c  printer_class.h  printer_desc.c  printer_desc.h
.vendor/AT32F45x_Firmware_Library_V2.0.1/middlewares/usbd_class/winusb/: winusb_class.c  winusb_class.h  (+2 more)
.vendor/AT32F45x_Firmware_Library_V2.0.1/project/: at_start_f455_Example_list.htm  at_start_f456_Example_list.htm  at_start_f457_Example_list.htm
.vendor/AT32F45x_Firmware_Library_V2.0.1/project/at32f45x_board/: at32f45x_board.c  at32f45x_board.h
IO_BOARD/: 192点线束测试规格.md  AT32F455VET7_Fixture.ATWP  CMakeLists.txt  README.md  at32f_fixture.xlsx  at32f_fixture250724.xlsx  二代升级版测试机规格要求.docx  自用线束测试机规格要求-LED版本.docx  自用线束测试机规格要求.docx
IO_BOARD/cmake/: arm-none-eabi.cmake  generate_ir_code.cmake
IO_BOARD/debug/: at32f455.gdb  ir_capture_history.jsonl  ir_code_normalized.c  ir_display_watchdog.py  ir_receive_live.gdb  ir_receive_watch.gdb  ir_render.py  ir_waveform_live.html
IO_BOARD/docs/: io_program_design_summary.md  io_scan_mapping.md  led7seg_module_selection.md  production_line_terminal_model.md  project_tracking_report_2026-05-28.docx  project_tracking_report_2026-05-28.html  rpi_protocol.md
IO_BOARD/hardware/: README.md
IO_BOARD/hardware/db78_64x4/: BOM.md  README.md
IO_BOARD/hardware/old_db50/: BOM.md  README.md
IO_BOARD/inc/: at32f45x_conf.h  io_board.h  io_scan.h  ir_learned_code.h  ir_remote.h  line_comm_bridge.h  print_job_model.h  rpi_protocol.h  rpi_rs485.h  rpi_rs485_legacy.h  tm1637_display.h
IO_BOARD/openocd/: at32f455.cfg  atlink-cmsis-dap.cfg
IO_BOARD/src/: at32f45x_clock.c  at32f45x_int.c  io_board.c  io_scan.c  ir_learned_code.c  ir_remote.c  line_comm_bridge.c  main.c  print_job_model.c  rpi_protocol.c  rpi_rs485.c  rpi_rs485_legacy.c  syscalls.c  tm1637_display.c
TestV1.0/: 无连打印机器的测试机端的接收和发射信号.logicdata  有连打印机器的测试机端的接收和发射信号.logicdata
TestV1.0/analysis_outputs/: ir_protocol_analysis.md  printer_rx_seen_tester_response_envelope.csv  useful_middle_handshake.md  useful_middle_timeline.csv  useful_printer_trigger_tx_envelope.csv  useful_tester_response_tx_envelope.csv
terminal/: print_terminal_mockup.html
tm1637/: TM1637.DWG
tm1637/测试程序/: STC15W_EEPROM.lst  eeprom.LST  main  main.M51  main.hex  main.lnp  main.lst  main.plg  main.plg.12757449  main.uvopt  main.uvproj  main.uvproj.12757465  main_uvopt.bak  main_uvproj.bak  tm1637.lst  tm1650.lst  数码管说明.txt
tm1637/测试程序/eeprom/: STC15W_EEPROM.c
tm1637/测试程序/hadder/: STC15W_EEPROM.h  tm1637.h
tm1637/测试程序/mian/: main.c
tm1637/测试程序/tm1637/: tm1637.c
tools/udev/: 60-atlink-cmsis-dap.rules
(+2895 files in other folders)
